Moving comment count to default layout & the adding the link next to the date of each post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,5 +44,6 @@
       })(document);
     </script>
     {% include google_analytics.html %}
+    {% include comment_count.html %}
   </body>
 </html>
