--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+  <span class="post-date">{{ page.date | date_to_string }} - <a href="{{ post.url }}#disqus_thread" data-disqus-identifier="{{ page.url }}"></a></span>
   {{ content }}
   {% include comments.html %}
 </div>
